--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" >
     <title>Document</title>
 </head>
+
 <body>
-    <h1>CHAMIGROW</h1>
-    <h2>Festi420</h2>
-    
+    <header id="header">
+
+        <nav class="nav">
+            <ul class="navLinks">
+                <li><a href="">El  Festival</a></li>
+                <li><a href="">Grilla-Fechas</a></li>
+                <li><a href="">Entradas</a></li>
+                <li><a href="">Merchandise</a></li>
+                <li><a href="">Contacto</a></li>
+            </ul>
+        </nav>
+        <section class="section1">
+            <h1 class="tituloPortada">CHAMIGROW</h1>
+            <h2 class="subtituloPortada">Festi420</h2>
+        </section>
+
+    </header>
+    <main>
+        <section id="sectionEntradas"></section>
+        <input id="inputBusqueda" placeholder="Buscar su entrada">
+        <button id="botonBuscar">Buscar</button>
+        <div id="contenedorCarrito"></div>
+
+        <section id="sectionMerchandise">
+
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
+
+
     <script src="./script.js"></script>
-    
+
 </body>
+
 </html>
