--- a/index.html
+++ b/index.html
@@ -9,40 +9,138 @@
 </head>
 
 <body>
-    <header id="header">
+    <header id="header" class="headerInicio">
 
+        
         <nav class="nav">
+
+            <a href="#"><img class="imglogo" src="img/CHAMIGROW`24 (1).png" alt="Logo Chamigrow"</a>
+
             <ul class="navLinks">
-                <li><a href="">El  Festival</a></li>
-                <li><a href="">Grilla-Fechas</a></li>
-                <li><a href="">Entradas</a></li>
-                <li><a href="">Merchandise</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="#">A LA FILA</a></li>
+                <li><a href="page/festival.html">FESTIVAL</a></li>
+                <li><a href="page/noticias.html">NOTICIAS</a></li>
+                <li><a href="page/entradas.html">ENTRADAS</a></li>
+                <li><a href="page/contacto.html">CONTACTOS</a></li>
             </ul>
         </nav>
-        <section class="section1">
-            <h1 class="tituloPortada">CHAMIGROW</h1>
-            <h2 class="subtituloPortada">Festi420</h2>
+        <section class="sectionPortadaInicio">
+            <div class="grilla21">
+                <h2 class="grilla21-titulo">21 JUNIO</h2>
+                <p>CHRISTOPHER ERRE</p>
+                <p>PITI FERNANDEZ</p>
+                <p>VALHALLA</p>
+                <p>LOS CHICOS DEL PORTICO</p>
+                <p>CARIES NUEVAS</p>
+                <p>CHARLAS CANNABICAS</p>
+            </div>
+            <div class="grilla22">
+                <h2 class="grilla22-titulo">22 JUNIO</h2>
+                <p>DJ MONO</p>
+                <p>420 FREESTYLE</p>
+                <p>ISLA DE CARAS</p>
+                <p>MUSHA SOUL</p>
+                <p>JOSEFFA</p>
+                <p>ARGON</p>
+            </div>
+            <div class="grilla23">
+                <h2 class="grilla23-titulo">23 JUNIO</h2>
+                <p>SARA HEBE</p>
+                <p>LOS ESPIRITUS</p>
+                <p>DJ MOGUILLER</p>
+                <p>MEKALA METAL</p>
+                <p>ECUANIME</p>
+                <p>SUSPENSIN TRIO</p>
+            </div>
+            
         </section>
 
     </header>
     <main>
-        <section id="sectionEntradas"></section>
+        <section class="diasGrilla">
+            <article class="diasGrilla1">
+                <a href="page/21junio.html">21<br>JUNIO</a>
+            </article>
+            <article class="diasGrilla2">
+                <a href="page/22junio.html">22<br>JUNIO</a>
+            </article>
+            <article class="diasGrilla3">
+                <a href="page/23junio.html">23<br>JUNIO</a>
+            </article>
+
+        </section>
+        <section class="secNoticias">
+            <div class="secNoticiasImg">
+                <article class="secNoticiasImg1">
+                    <p>SARA HEBE</p>
+                    <p>Confirmado<br>
+                        dia 23 de Junio
+                    </p>
+                </article>
+                <article class="secNoticiasImg2">
+                    <p>DJ MONO</p>
+                    <p>Confirmado<br>
+                        dia 22 de Junio
+                    </p>
+                </article>
+                <article class="secNoticiasImg3">
+                    <p>PITI FERNANDEZ</p>
+                    <p>Confirmado<br>
+                        dia 21 de Junio
+                    </p>
+                </article>
+                <article class="secNoticiasImg4">
+                    <p>CHRISTOPHER ERRE</p>
+                    <p>Confirmado<br>
+                        dia 21 de Junio
+                    </p>
+                </article>
+            </div>
+            <div class="cajaBoton">
+                <p><a href="page/noticias.html"> VER MAS NOTICIAS</a></p>
+            </div>
+
+        </section>
+
+        <section class="otrosEventos">
+            <article class="eventoFreestyle">
+                <h2>420 FREESTYLE - BATALLAS DE RAP</h2>
+                <p>BATALLA ESCRITA Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quos quo architecto at, non totam consequatur nihil. Nemo vel natus neque maiores exercitationem? Laudantium natus necessitatibus neque amet. Velit, incidunt.<br>SOUL VS ROEX / TCNICK VS GALLO <br>KEYONE VS NAIT ALLEPH <br>ENTRE OTROS...</p>
+            </article>
+            <article class="eventoCharla">
+                <h2>CHARLAS CANNABICAS</h2>
+                <p>Abriendo el dialogo sobre el consumo de adultos responsables en nuestro pais. Actualizacion en Normativa cannabica. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, error dicta nisi ut unde nemo maiores nihil obcaecati saepe autem, quae explicabo deserunt cum incidunt. Nisi quasi dolor corporis perferendis?
+                </p>
+            </article>
+        </section>
+        <!-- <section id="sectionEntradas"></section>
         <input id="inputBusqueda" placeholder="Buscar su entrada">
         <button id="botonBuscar">Buscar</button>
         <div id="contenedorCarrito"></div>
 
         <section id="sectionMerchandise">
 
-        </section>
+        </section> -->
 
     </main>
-    <footer>
+    <footer class="footer">
+        <h2>SPONSOR</h2>
+        <div class="divFooter">
+            <p>@sneakers</p>
+            <p>@sublimarioja</p>
+            <p>@blume.lr</p>
+            <p>@brocoli.lr</p>
+            <p>@mikilo.semas</p>
+            <p>@con_cienciacoletiva</p>
+            <p>@mabrak</p>
+            <p>@flordegrow</p>
+
+        </div>
 
     </footer>
 
 
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
 
 </body>
 
